# Ongaku

./: .gitignore  README.md  meson.build  package.sh  prepare-spotdl.sh  xyz.arell.ongaku.gschema.xml
data/: meson.build  xyz.arell.ongaku.gschema.xml
debian_package/: ongaku_1.0.0_amd64.deb  ongaku_1.0.1_amd64.deb  ongaku_1.0.2_amd64.deb  ongaku_1.0.3_amd64.deb
debian_package/ongaku_1.0.0_amd64/DEBIAN/: control  postinst  prerm
debian_package/ongaku_1.0.0_amd64/usr/share/applications/: ongaku.desktop
debian_package/ongaku_1.0.1_amd64/DEBIAN/: control  postinst
debian_package/ongaku_1.0.2_amd64/DEBIAN/: control  postinst
debian_package/ongaku_1.0.3_amd64/DEBIAN/: control  prerm
debian_package/ongaku_1.1.0_amd64/DEBIAN/: control  postinst
debian_package/ongaku_1.1.0_amd64/usr/share/applications/: ongaku.desktop
scripts/: spotdl-wrapper.sh.in  update-schema.sh
spotdl-custom/: pyvenv.cfg
src/: Main.vala  application.vala  main.vala  ongaku  window.vala
src/core/: config.vala  downloader.vala  settings.vala
src/dialogs/: preferences.vala
src/utils/: file_utils.vala
src/widgets/: download_form.vala  history_list.vala  progress_bar.vala
